Informe:
	19/08/2022: Se iniciaron los puntos 1 y 2 del informe, aunque falta pulirlos.
	21/08/2022: Importantes avances en informe (Pre-Lab), falta pulirlos.
    24/08/2022: TDAs actualizados

Código:
	20/08/2022: Agregado TDA pixbit
	20/08/2022: Agregado TDA pixhex
	20/08/2022: Agregado TDA pixrgb
	20/08/2022: TDAs pixeles pulidos y comentados
	21/08/2022: Funciones TDAs agregadas al archivo de pruebas
	24/08/2022: Agregado identificador a todos los TDA