@@ -1,0 +1,10 @@
+#lang racket
+
+;-------------------------------------------------- Importaciones ------------------------------------------------------------------------------------
+
+(require "TDAs/TDA_pixbit-d_20614346_EspinozaGonzalez.rkt")  ;TDA pixbit-d
+(require "TDAs/TDA_pixrgb-d_20614346_EspinozaGonzalez.rkt")  ;TDA pixrgb-d
+(require "TDAs/TDA_pixhex-d_20614346_EspinozaGonzalez.rkt")  ;TDA pixhex-d
+
+;-----------------------------------------------------------------------------------------------------------------------------------------------------
+
