@@ -8,3 +8,48 @@
 
 ;-----------------------------------------------------------------------------------------------------------------------------------------------------
 
+
+;-------------------------------------------------- 2.TDA image - constructor ------------------------------------------------------------------------
+
+;Crea una imagen a partir de sus dimensiones y una serie de pixeles
+;Entrada: int x int x [pixbit-d / pixrgb-d / pixhex-d] (Se pueden ingresar n del mismo tipo)
+;Salida: image
+(define image (lambda (Width Height . pixels)
+                (if (and (number? Width) (number? Height))
+                    (if (equal? pixels null)
+                        (list Width Height pixels)
+                        (if (pixbit-dlist? pixels)
+                            (list Width Height pixels)   
+                            (if (pixhex-dlist? pixels)
+                                (list Width Height pixels)
+                                (if (pixrgb-dlist? pixels)
+                                    (list Width Height pixels)
+                                    (list -1 -1 null)    ;Esta será la representación de una imagen erronea '(-1 -1 ())
+                                    )
+                                )
+                            )
+                        )
+                    (list -1 -1 null)
+                    )))
+
+;-----------------------------------------------------------------------------------------------------------------------------------------------------
+
+#|
+;-------------------------------------------------- 3.TDA image - bitmap? ----------------------------------------------------------------------------
+
+;Función que dice si una imagen es o no u  bitmap
+;Entrada: image
+;Salida: booleano
+(define bitmap? (lambda (image)
+                  (if)))
+|#
+
+
+
+
+
+
+
+
+
+
