@@ -10,3 +10,4 @@ Código:
 	20/08/2022: TDAs pixeles pulidos y comentados
 	21/08/2022: Funciones TDAs agregadas al archivo de pruebas
 	24/08/2022: Agregado identificador a todos los TDA
+	24/08/2022: Función image agregada
